# python-wallety

./: README.md  pyproject.toml
wallety/: asgi.py  main.py  settings.py  test_main.http  wsgi.py
wallety/application/ports/driven/: crypto_repository_port.py  user_repository_port.py
wallety/application/ports/driving/: crypto_service_port.py  user_service_port.py
wallety/application/services/: crypto_services.py  user_services.py
wallety/domain/entities/: crypto.py  user.py
wallety/driven/api/crypto/: coincap_mapper.py  coincap_repository_adapter.py
wallety/driven/api/crypto/dto/: coincap_data_list_dto.py  coincap_data_single_dto.py  coincap_dto.py  crypto_dto.py
wallety/driven/db/user/: user_db_adapter.py  user_db_mapper.py
wallety/driven/db/user/models/: user_db.py
wallety/driven/memory/user/: user_memory_adapter.py  user_memory_mapper.py
wallety/driven/memory/user/models/: user_dto.py
wallety/driving/api/crypto/: crypto_api_adapter.py  crypto_api_mapper.py
wallety/driving/api/crypto/models/: crypto_dto.py
wallety/driving/api/user/: user_api_adapter.py  user_api_mapper.py
