[tool.poetry]
name = "python-hexagonal-architecturehy"
version = "0.0.1"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = []
package-mode = false

[tool.poetry.dependencies]
python = "3.11.9"
fastapi = "0.109.2"
sqlalchemy = "2.0.27"
psycopg2-binary = "2.9.9"
uvicorn = "0.27.1"
pydantic-settings = "2.2.1"
pyyaml = "6.0.1"
pyaml-env = "1.2.1"
python-i18n = "0.3.9"
djangorestframework = "^3.15.2"
Django = "^5.0.6"
django-oauth-toolkit = "^2.4.0"
psycopg2 = "^2.9.9"

[tool.poetry.group.dev.dependencies]
pytest = "8.2.1"
pytest-cov = "5.0.0"
pytest-mock = "3.14.0"
pytest-asyncio = "0.23.7"
pytest-xdist = "3.6.1"
pytest-faker = "2.0.0"
pytest-freezer = "0.4.8"
pyfakefs = "5.5.0"
httpx = "0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
